Fixed JWT issue and added roles and permission