@@ -1,10 +1,14 @@
 package com.neighbourly.userservice.security;
 
+import com.neighbourly.userservice.security.CustomPrincipal;
+import com.neighbourly.userservice.security.SecurityConstants;
 import com.neighbourly.userservice.service.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -13,10 +17,12 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-
+    private static final Logger logger = LoggerFactory.getLogger(JwtAuthenticationFilter.class);
     private final JwtService jwtService;
 
     public JwtAuthenticationFilter(JwtService jwtService) {
@@ -27,23 +33,34 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
         String authHeader = request.getHeader(SecurityConstants.HEADER_STRING);
+        logger.info("Authorization Header: {}", authHeader);
         if (authHeader != null && authHeader.startsWith(SecurityConstants.TOKEN_PREFIX)) {
             String token = authHeader.substring(7);
+            logger.info("Token: {}", token);
             if (jwtService.validateToken(token)) {
-                String username = jwtService.getUsernameFromToken(token);
+                String email = jwtService.getEmailFromToken(token);
                 Long userId = jwtService.getUserIdFromToken(token);
-                List<String> roles = jwtService.getRolesFromToken(token);
-
+                Map<String, List<String>> roles = jwtService.getRolesFromToken(token);
+                List<String> authorities = roles.entrySet().stream()
+                        .flatMap(entry -> entry.getValue().stream()
+                                .map(role -> "ROLE_" + entry.getKey().toUpperCase() + "_" + role.toUpperCase()))
+                        .collect(Collectors.toList());
+                logger.info("Email: {}, UserId: {}, Authorities: {}", email, userId, authorities);
                 UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                        new CustomPrincipal(userId, username, roles),
+                        new CustomPrincipal(userId, email, roles.entrySet().stream()
+                                .flatMap(e -> e.getValue().stream()).collect(Collectors.toList())),
                         null,
-                        roles.stream()
-                                .map(role -> new org.springframework.security.core.authority.SimpleGrantedAuthority("ROLE_" + role))
-                                .toList()
+                        authorities.stream()
+                                .map(role -> new org.springframework.security.core.authority.SimpleGrantedAuthority(role))
+                                .collect(Collectors.toList())
                 );
                 authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(authentication);
+            } else {
+                logger.warn("Invalid JWT token");
             }
+        } else {
+            logger.warn("No valid Bearer token found in request");
         }
         filterChain.doFilter(request, response);
     }
